fix meta keys only shortcuts

--- a/src/page_action/page_action.html
+++ b/src/page_action/page_action.html
@@ -29,7 +29,7 @@
     <span id="modifier-alt">Alt</span>
     <span id="modifier-shift">Shift</span>
     <span>+</span>
-    <input id="shortcut" type="text" name="shortcut" placeholder="Click to edit" value="Esc">
+    <input id="shortcut" type="text" name="shortcut">
     <button disabled>Save</button>
     <script src="page_action.js"></script>
 </body>
