--- a/src/page_action/page_action.html
+++ b/src/page_action/page_action.html
@@ -8,7 +8,7 @@
             white-space: nowrap;
         }
         span {
-            color: gray;
+            color: rgba(206, 206, 206, 0.5);
             display: inline-block;
             padding: 0px 2px;
         }
